--- a/src/components/Header/NavBar/NavBar.module.css
+++ b/src/components/Header/NavBar/NavBar.module.css
@@ -52,6 +52,7 @@ p {
     text-transform: uppercase;
     font-size: .94rem;
     letter-spacing: 1px;
+    color: #a4acc4;
     display: block;
     padding: 5px 0;
     font-weight: 600;
@@ -60,9 +61,37 @@ p {
     z-index: 1;
 }
 
-.main_header_menu li a.active {
-    color: white;
+.main_header_menu li a, .main_header_menu li a:before{
+    transition: all .4s ease-out;
 }
+
+.main_header_menu li a:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 100%;
+    height: 100%;
+    width: 0;
+    background: rgba(3,127,255,.2);
+    visibility: hidden;
+    z-index: -1;
+}
+
+.main_header_menu a:hover:before {
+    width: 100%;
+    visibility: visible;
+}
+
+.main_header_menu a:hover {
+    color: #037fff;
+}
+
+.main_header_menu a:active {
+    color: #ffff;
+    background: #037fff;
+}
+
 
 .main_header_copyright {
     display: block;
